# lazynix

./: .gitignore  .yamllint.yml  Cargo.toml  README.md  flake.nix
.github/actions/setup-nix/: action.yml
.github/workflows/: pass_cargo_commands.yml  pass_nix_commands.yml  release.yml
crates/: README.md
crates/lnix/: Cargo.toml  README.md
crates/lnix-app/: Cargo.toml  README.md
crates/lnix-app/src/: deps.rs  error.rs  lib.rs  mocks.rs  pipeline.rs
crates/lnix-app/src/usecase/: develop.rs  generate.rs  init.rs  lint.rs  mod.rs  run.rs  search.rs  task.rs  test.rs  update.rs
crates/lnix-core/: Cargo.toml  README.md
crates/lnix-core/src/: error.rs  lib.rs
crates/lnix-core/src/config/: env.rs  mod.rs  package.rs  validate.rs
crates/lnix-core/src/values/: env_var_name.rs  package_name.rs  package_version.rs  registry_url.rs  task_name.rs
crates/lnix-domain/: Cargo.toml  README.md
crates/lnix-domain/src/: error.rs  lib.rs
crates/lnix-domain/src/config/: dev_shell.rs  mod.rs  settings.rs  task.rs  validate.rs
crates/lnix-domain/src/definition/: dev_shell.rs  env.rs  mod.rs  validate.rs
crates/lnix-domain/src/interface/: mod.rs  output.rs
crates/lnix-domain/src/interface/gateway/: mod.rs  nix_evaluator.rs  nix_runner.rs  version_resolver.rs
crates/lnix-domain/src/interface/persistence/: config_repository.rs  env_file.rs  flake_writer.rs  mod.rs  scaffolder.rs
crates/lnix-domain/src/service/: mod.rs  task.rs
crates/lnix-domain/src/service/flake/: build_inputs.rs  mod.rs  pinned.rs  shell_hook.rs
crates/lnix-domain/src/service/lint/: classification.rs  error.rs  mod.rs  result.rs
crates/lnix-domain/src/service/lint/report/: messages.rs  mod.rs
crates/lnix-domain/src/values/: mod.rs
crates/lnix-flake-generator/: Cargo.toml  README.md
crates/lnix-flake-generator/src/: config.rs  error.rs  generator.rs  lib.rs  parser.rs
crates/lnix-flake-generator/src/generator/: build_inputs.rs  mod.rs  path.rs  pinned.rs  shell_hook.rs  test_runner.rs
crates/lnix-infra/: Cargo.toml  README.md
crates/lnix-infra/src/: lib.rs  paths.rs  process.rs
crates/lnix-infra/src/gateway/: mod.rs  nix_evaluator.rs  nix_runner.rs  version_resolver.rs
crates/lnix-infra/src/output/: mod.rs  stdout.rs
crates/lnix-infra/src/persistence/: config_repository.rs  env_checker.rs  flake_writer.rs  mod.rs  scaffolder.rs
crates/lnix-infra/templates/: lazynix-settings.yaml.template  lazynix.yaml.template
crates/lnix-infra/tests/: yaml_template_test.rs
crates/lnix-linter/: Cargo.toml  README.md
crates/lnix-linter/src/: error.rs  lib.rs  nix_eval.rs  validator.rs
crates/lnix-linter/src/reporter/: messages.rs  mod.rs
crates/lnix-linter/tests/: integration_test.rs
crates/lnix-nix-dispatcher/: Cargo.toml  README.md
crates/lnix-nix-dispatcher/src/: error.rs
crates/lnix/src/: cli_parser.rs  composition.rs  env_validator.rs  error.rs  lazynix_settings_yaml.rs  main.rs
crates/lnix/src/commands/: develop.rs  init.rs  lint.rs  mod.rs  pipeline.rs  run.rs  search.rs  task.rs  test.rs  update.rs
crates/lnix/tests/: generate_command_test.rs  global_flags_test.rs  help_and_version_test.rs  task_command_test.rs  test_command_test.rs  update_command_test.rs
crates/lnix/tests/common/: mod.rs
document/en/: getting_started.md  philosophy.md  system_architecture.md
document/jp/: getting_started.md  philosophy.md  system_architecture.md
document/jp/design/: version-pinning.md
examples/python/: README.md  flake.nix  lazynix.yaml
qa/test_cases/: develop_usecase_20260703.csv  dismantle_legacy_crates_20260703.csv  lnix_app_skeleton_20260702.csv  lnix_domain_refactor_20260702.csv  lnix_infra_adapters_20260702.csv  remaining_usecases_20260703.csv
scripts/: get-version.sh
src/cli/: Cargo.toml  flake.nix
src/cli/src/: cli_parser.rs  env_validator.rs  main.rs  task_interpolator.rs
src/cli/src/commands/: lint.rs
src/cli/tests/: develop_command_test.rs  help_and_version_test.rs  init_command_test.rs  lint_command_test.rs  run_command_test.rs
src/cli/tests/common/: assertions.rs  fixtures.rs  setup.rs
src/flake-generator/: Cargo.toml
src/flake-generator/src/: config.rs  generator.rs  lib.rs  package_validator.rs  parser.rs
src/linter/: Cargo.toml
src/linter/src/: error_classifier.rs  reporter.rs  validator.rs
src/linter/tests/: integration_test.rs
src/nix-dispatcher/: Cargo.toml
src/nix-dispatcher/src/: commands.rs  lib.rs  version_resolver.rs
src/templates/: flake.nix.init.template  lazynix-settings.yaml.template  lazynix.yaml.template
