[workspace]
members = [
    "crates/lnix",
    "crates/lnix-app",
    "crates/lnix-domain",
    "crates/lnix-infra",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/shunsock/lazynix"

[workspace.dependencies]
# Internal crates
lnix-app = { path = "crates/lnix-app" }
lnix-domain = { path = "crates/lnix-domain" }
lnix-infra = { path = "crates/lnix-infra" }

# External crates
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
predicates = "3.1"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.15"
thiserror = "2.0"
