[package]
name = "lnix-domain"
description = "Domain layer for LazyNix: value objects, the DevShellDefinition AST, pure services, and ports"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
