[package]
name = "lnix-linter"
description = "Package validation linter for LazyNix"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
