[package]
name = "lnix-nix-dispatcher"
description = "Nix command dispatcher for LazyNix"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
