[package]
name = "lnix"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "lnix"
path = "src/main.rs"

[dependencies]
lnix-flake-generator = { workspace = true }
lnix-linter = { workspace = true }
lnix-nix-dispatcher = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
