[package]
name = "lnix"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "lnix"
path = "src/main.rs"

[dependencies]
lnix-app = { workspace = true }
lnix-infra = { workspace = true }

clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
